--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,7 @@ img.inst-you:hover, img.inst-you:active {height: 60px;}
 }
 
 .link-style {
+    float: left;
     margin-top: 30px;
     font-size: 1.5em;
     color: #5c1a74;
