--- a/css/style.css
+++ b/css/style.css
@@ -194,9 +194,10 @@ img.inst-you:hover, img.inst-you:active {height: 60px;}
 
 #link-area{
     height: 300px;
-   font-family: "Ubuntu";
+    width:100%;
+    font-family: "Ubuntu";
     margin-top: 20px;
-    margin-left: -50px;
+    margin-left: 20px;
 }
 
 .content_image {
@@ -276,14 +277,13 @@ img.inst-you:hover, img.inst-you:active {height: 60px;}
     margin-top: 20px;
 }
 .gallery {
-    float: left;
-    margin-left: -50%;
-    height:20%;
+    height: 300px;
+    width: 100%;
 }
 
 figure img {
-    height: 100%;
-    width: 100%;
+    height: 40%;
+    width: 40%;
 }
 
 #map {
