--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ img.inst-you:hover, img.inst-you:active {height: 60px;}
     width: 100%;
 }
 
-figure img {
+gallery img {
     height: 100%;
     width: 100%;
 }
