--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,12 @@ img.inst-you:hover, img.inst-you:active {height: 60px;}
    border-radius: 0 10px 10px 0;
  }
 
+.footer {
+    text-align: right;
+    font-size: 2vh;
+    padding-top: 2%;
+    padding-right: 2.5%;
+}
 /*For mobile version===================*/
 
 
@@ -443,6 +449,13 @@ img.inst-you:hover, img.inst-you:active {height: 40px;}
    background-color: grey;
    border-radius: 0 0 10px 10px;
  }
+    
+ .footer {
+    text-align: right;
+    font-size: 2vh;
+    padding-top: 3%;
+  
+}
 
    
  
