--- a/css/style.css
+++ b/css/style.css
@@ -275,12 +275,18 @@ img.inst-you:hover, img.inst-you:active {height: 60px;}
     margin-top: 20px;
 }
 .gallery {
-    height: 300px;
     width: 100%;
+    display: -webkit-flex; /* Safari */
+    -webkit-align-items: center; /* Safari 7.0+ */
+    display: flex;
+    align-items: center;
+    display: inline-block;
+    padding-left:1.5%;
 }
 
 .gallery img {
-    width: 50%;
+    width: 30%;
+    padding: 1%;
 }
 
 #map {
