--- a/css/style.css
+++ b/css/style.css
@@ -220,8 +220,9 @@ img.inst-you:hover, img.inst-you:active {height: 60px;}
 
 .content_image {
     margin-top: 5%;
-    margin-left: 2.5%;
-    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     max-width: 46%; 
     max-height: auto;
     width: 100%;                                    /*Could be a fix to a responsive image*/
